Avoid robolectric added add-opens on JDK 1.8 (#8644)
* Avoid robolectric on JDK 1.8

Add add-opens and also fails to run.

* ... and release

* ... and release